# Network-2.0

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build.sh  install_deps_ubuntu.sh  install_deps_windows.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
src/: Alert.h  AnomalyDetector.cpp  AnomalyDetector.h  Logger.cpp  Logger.h  NetworkStats.cpp  NetworkStats.h  PacketCapture.cpp  PacketCapture.h  PacketTypes.h  Utils.cpp  Utils.h  WatchRules.cpp  WatchRules.h  main.cpp
